# pmx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pmx/: __init__.py  cli.py  client.py  config.py  confirm.py  pickers.py  render.py  resolve.py  state.py  tasks.py
src/pmx/commands/: __init__.py  _guests.py  backup.py  context.py  ct.py  node.py  pool.py  setup.py  storage.py  task.py  vm.py
src/pmx/tui/: __init__.py  app.py  data.py
tests/: test_cli.py  test_client.py  test_config.py  test_tasks.py  test_tui.py
