[project]
name = "pmx"
version = "0.1.0"
description = "Manage a Proxmox VE cluster from your terminal — no SSH, no web UI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Timothy Bryant" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "keyring>=25.0",
    "inquirerpy>=0.3.4",
    "tomlkit>=0.12",
    "textual>=0.80",
]

[project.scripts]
pmx = "pmx.cli:run"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pmx"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
